--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -14,6 +14,8 @@ html {
 }
 
 body {
+  width: 100%;
+  height: max(100vh, 100%);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-image: url("./img/cameras-background.png");
@@ -24,8 +26,9 @@ body::after {
   content: "";
   display: block;
   width: 100%;
-  height: 100%;
+  height: max(100vh, 100%);
   background: #ededed;
+  background-size: auto;
   position: absolute;
   top: 0;
   left: 0;
